--- a/Style-test.html
+++ b/Style-test.html
@@ -9,19 +9,22 @@
 		}
 
 		h2{
-			color:Red;
-			font-size: 20px
+			color: green;\
+			font: 20px; 
 		}
+
+		.big
+			font-size60px;
 	</style>
 </head>
 <body>
 
-	<h1 >Heading 1 -1</h1>
-	<h1 >Heading 1 -2</h1>
-	<h1 >Heading 1 -3</h1>
-	<h2 >Heading 2 -1</h2>
-	<h2 >Heading 2 -2</h2>
-	<h2 >Heading 2 -3</h2>
+	<h1>Heading 1 - 1</h1>
+	<h1 class="big">Heading 1-2</h1>
+	<h1>Heading 1 - 3</h1>
+	<h2 class="big">Heading 2 - 1</h2>
+	<h2>Heading 2 - 2</h2>
+	<h2 class="big">Heading 2 - 3</h2>
 
 </body>
 </html>
